# CyberSeagull4

./: .gitignore  .gitmodules  CMakeLists.txt  CyberSeagull4.sln  CyberSeagull4.vcxproj  CyberSeagull4.vcxproj.filters  README.md  imgui.ini
Server/: CMakeLists.txt  CyberSeagull4Server.sln  Server.vcxproj  Server.vcxproj.filters
Server/asset/: SOOOOON MAY THE WELLLERRRRRRRMANNNNN COMEEEEEEEEEEEEEE.mid  nathan.midi
Server/include/cgullnet/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
Server/src/: Server.cpp  message.h  midi.h  server.h  util.h
asset/: Buddy Holly riff.mid
enc_temp_folder/1452b043fe7b893b6a37a564df0d34/: message.h
include/cgullnet/: net_client.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
include/glad/: glad.h
include/imgui/: imgui.h
include/tinyobjloader/: tiny_obj_loader.h
lib/: glad.c  imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  win32_init.c
src/: cam.h  client.h  cnet.h  debug.h  game.h  graphics.h  input.h  light.h  main.cpp  message.h  midi.h  music.h  particle.h  renderGUI.h  rng.h  server.h  util.h  world_object.h
src/shader/: cube.frag  cube.vert  particle.frag  particle.vert  shadow.vert  triangle.frag  triangle.vert  water.frag  water.vert
